Added new transition

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,13 +1,15 @@
 $bg-color-dark: rgb(10, 25, 47);
+$bg-color-light: rgb(35, 53, 84);
 
 $color-brand: #64ffda;
 
 $color-green-tint: rgba(100, 255, 218, 0.1);
 
 $color-font-grey: rgb(204, 214, 246);
-$color-font-grey-dark: #8892b0;
+$color-font-grey-dark: rgb(136, 146, 176);
 
 $transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+$transition-long: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 $border-radius: 8px;
 
