--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth !important;
 
     &:focus {
         outline: none;
