--- a/components/UI/HomepageTitle.module.scss
+++ b/components/UI/HomepageTitle.module.scss
@@ -7,6 +7,8 @@
     font-size: 3.2rem;
     color: $color-font-grey;
     white-space: nowrap;
+    margin-top: 7rem;
+    margin-bottom: 4rem;
 
     &__number {
         color: $color-brand;
