--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
 $bg-color-dark: rgb(10, 25, 47);
 $bg-color-light: rgb(35, 53, 84);
+$bg-color-lighter: rgb(17, 34, 64);
 
 $color-brand: #64ffda;
 
@@ -9,7 +10,7 @@ $color-font-grey: rgb(204, 214, 246);
 $color-font-grey-dark: rgb(136, 146, 176);
 
 $transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-$transition-long: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+$transition-long: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 
 $border-radius: 8px;
 
