--- a/components/sections/projects/FeaturedProject.module.scss
+++ b/components/sections/projects/FeaturedProject.module.scss
@@ -70,7 +70,7 @@
         color: $color-font-grey;
         font-size: 1.6rem;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         width: 80%;
         margin-left: auto;
     }
