--- a/components/sections/hero/Hero.module.scss
+++ b/components/sections/hero/Hero.module.scss
@@ -15,6 +15,9 @@
         letter-spacing: 1;
         font-weight: 700;
         margin-bottom: 1rem;
+        @media screen and (max-width: 43.75em) {
+            font-size: 1.8rem;
+        }
     }
 
     &__subtitle {
@@ -27,6 +30,14 @@
         &--dark {
             color: $color-font-grey-dark;
         }
+
+        @media screen and (max-width: 56.25em) {
+            font-size: 4.8rem;
+        }
+
+        @media screen and (max-width: 43.75em) {
+            font-size: 3.6rem;
+        }
     }
 
     &__description {
@@ -35,6 +46,15 @@
         font-size: 2rem;
         font-weight: 500;
         padding: 1rem 0;
+
+        @media screen and (max-width: 56.25em) {
+            max-width: 70%;
+        }
+
+        @media screen and (max-width: 43.75em) {
+            max-width: 90%;
+            font-size: 1.8rem;
+        }
     }
 
     &__accent {
