--- a/components/navigation/Navigation.module.scss
+++ b/components/navigation/Navigation.module.scss
@@ -21,7 +21,7 @@
     gap: 2rem;
 
     @media screen and (max-width: 43.75em) {
-        gap: 1.4rem;
+        display: none;
     }
 
     &__skip {
@@ -51,6 +51,67 @@
             height: auto;
             overflow: auto;
             z-index: 99;
+        }
+    }
+}
+
+.mobile-nav {
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        border: none;
+        color: transparent;
+        cursor: pointer;
+        position: fixed;
+        top: 3rem;
+        right: 3rem;
+        &:focus {
+            outline: none !important;
+        }
+    }
+
+    &__icon {
+        width: 3rem;
+
+        &:focus {
+            outline: none !important;
+        }
+
+        &,
+        &::before,
+        &::after {
+            display: block;
+            height: 2px;
+            background-color: $color-brand;
+            transition: 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+            content: "";
+        }
+
+        &::before {
+            width: 4rem;
+
+            transform: translateY(calc(-1rem - 50%));
+        }
+
+        &::after {
+            width: 2rem;
+
+            transform: translateY(calc(1rem - 50%));
+        }
+
+        &-active {
+            height: 0;
+
+            &::before {
+                width: 4rem;
+                transform: translateY(0) rotate(135deg);
+            }
+
+            &::after {
+                width: 4rem;
+                transform: translateY(-1px) rotate(-135deg) translateX(1px);
+            }
         }
     }
 }
