--- a/components/navigation/NavLink.module.scss
+++ b/components/navigation/NavLink.module.scss
@@ -14,11 +14,20 @@
 
     transition: $transition;
 
+    @media screen and (max-width: 43.75em) {
+        flex-direction: column;
+        justify-content: center;
+        font-size: 2.4rem;
+    }
+
     &:hover {
         color: $color-brand;
     }
 
     &__subtitle {
         color: $color-brand;
+        @media screen and (max-width: 43.75em) {
+            font-size: 1.6rem;
+        }
     }
 }
