--- a/components/sections/projects/FeaturedProject.module.scss
+++ b/components/sections/projects/FeaturedProject.module.scss
@@ -10,6 +10,8 @@
         display: flex;
         position: relative;
         z-index: 1;
+        width: 100%;
+        max-height: 100%;
 
         &--right {
             grid-column: 1 / 9;
