--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,13 +1,17 @@
-$bg-color-dark: rgb(10, 25, 47);
-$bg-color-light: rgb(35, 53, 84);
-$bg-color-lighter: rgb(17, 34, 64);
+$bg-color-dark: #1a1a20;
+$bg-color-light: #2f2f36;
+$bg-color-lighter: rgb(39, 39, 38);
+// $bg-color-dark: rgb(10, 25, 47);
+// $bg-color-light: rgb(35, 53, 84);
+// $bg-color-lighter: rgb(17, 34, 64);
 
-$color-brand: #64ffda;
+// $color-brand: #64ffda;
+$color-brand: rgb(255, 154, 67);
 
-$color-green-tint: rgba(100, 255, 218, 0.1);
+$color-green-tint: rgba(255, 154, 67, 0.1);
 
-$color-font-grey: rgb(204, 214, 246);
-$color-font-grey-dark: rgb(136, 146, 176);
+$color-font-grey: rgb(218, 218, 218);
+$color-font-grey-dark: rgb(163, 163, 162);
 
 $transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 $transition-long: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
