--- a/components/UI/HomepageTitle.module.scss
+++ b/components/UI/HomepageTitle.module.scss
@@ -21,6 +21,11 @@
         font-size: 2.4rem;
         margin-bottom: 0.2rem;
         font-weight: 400;
+
+        @media screen and (max-width: 33.45em) {
+            margin-right: 1rem;
+            font-size: 2rem;
+        }
     }
 
     &::after {
@@ -30,5 +35,9 @@
         display: block;
         margin-left: 2.4rem;
         background-color: $bg-color-light;
+
+        @media screen and (max-width: 33.45em) {
+            display: none;
+        }
     }
 }
