--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap");
+@import './variables';
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -37,7 +37,7 @@ body {
 }
 
 body {
-    font-family: "Roboto Mono", sans-serif;
+    font-family: 'Roboto Mono', sans-serif;
     background: $bg-color-dark;
     padding: 0 7rem;
 
@@ -53,4 +53,19 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+code {
+    counter-reset: step;
+    counter-increment: step 0;
+}
+
+code .line::before {
+    content: counter(step);
+    counter-increment: step;
+    width: 1rem;
+    margin-right: 1.5rem;
+    display: inline-block;
+    text-align: right;
+    color: rgba(115, 138, 148, 0.4);
 }
