feat: update blog footer component

--- a/components/blog/Footer/Footer.module.scss
+++ b/components/blog/Footer/Footer.module.scss
@@ -1,6 +1,50 @@
+@import '../../../styles/variables';
+
 .separator {
-  margin-top: 2rem;
-  height: 1px;
-  width: 100%;
-  background: linear-gradient(to right, rgba(255, 154, 67, 0) 0%, rgba(255, 154, 67, 0.7) 50%, rgba(255, 154, 67, 0) 100%);
+    margin-top: 12rem;
+    height: 1px;
+    width: 100%;
+    background: linear-gradient(
+        to right,
+        rgba(255, 154, 67, 0) 0%,
+        rgba(255, 154, 67, 0.7) 50%,
+        rgba(255, 154, 67, 0) 100%
+    );
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 900px;
+    margin-inline: auto;
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.copyright {
+    font-size: 18px;
+    font-weight: 500;
+    color: $color-font-grey-dark;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.link {
+    cursor: pointer;
+}
+
+.link:hover .icon {
+    color: $color-brand;
+}
+
+.icon {
+    width: 32px;
+    height: 32px;
+    color: $color-font-grey;
+    transition: all 0.5s var(--ease-in-out-quint);
 }
