--- a/components/blog/Paragraph/Paragraph.module.scss
+++ b/components/blog/Paragraph/Paragraph.module.scss
@@ -8,8 +8,11 @@
 
     & code {
         background-color: $bg-color-light;
-        padding: 2px;
+        padding-left: 4px;
+        padding-right: 4px;
+        display: inline-block;
         border-radius: 4px;
         color: $color-font-grey;
+        font-weight: 600;
     }
 }
