--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,4 @@
 @import './variables';
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -37,6 +36,7 @@ body {
 }
 
 body {
+    overflow-x: hidden;
     font-family: 'Roboto Mono', sans-serif;
     background: $bg-color-dark;
     padding: 0 7rem;
